--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -1,9 +1,178 @@
 /* OWN STYLES */
-body {
-	background-color:white;
+html,body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color:white;
+    font-family: Helvetica, Arial;
+    font-size: 12px;
+}
+
+/*body {
+
     font-size:90%;
 	font-family:Helvetica,serif;
+}*/
+
+/** {
+    -khtml-user-select: none;
+    -moz-user-select: -moz-none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}*/
+
+div {
+    display: block;
 }
+
+/********WEBKIT SCROLLBAR **********/
+
+*::-webkit-scrollbar{height:10px;width:10px;overflow:visible;}
+*::-webkit-scrollbar-thumb{background-clip:padding-box;border:transparent solid 2px;border-radius:7px;min-height:28px;padding:100px 0 0;-webkit-box-shadow:inset 0 0 0 7px rgba(0, 0, 0, 0.25);}
+*::-webkit-scrollbar-thumb:hover{-webkit-box-shadow:inset 0 0 0 7px rgba(0, 0, 0, 0.3);}
+*::-webkit-scrollbar-button{height:0;width:0;}
+*::-webkit-scrollbar-track{background-clip:padding-box;background:rgba(255, 255, 255, 0.9);-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.1);}
+*::-webkit-scrollbar-track:vertical{border-left:rgba(0, 0, 0, 0.1) solid 1px;}
+*::-webkit-scrollbar-track:horizontal{border-top:rgba(0, 0, 0, 0.1) solid 1px;}
+*::-webkit-scrollbar-corner{background:rgba(255, 255, 255, 0.9);-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.1);}
+
+/******************/
+
+body {
+    position:absolute;
+    top:0;
+    right:0;
+    bottom:0;
+    left:0;
+    height:auto;
+    width:auto;
+    min-width:800px;
+    min-height:480px;
+    /*background-color: #F1F1F1;*/
+}
+
+body {
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+#headerBar,
+#footerBar{
+    position: fixed;
+    left:0;
+    right: 0;
+    height: 40px;
+    color: #999;
+}
+
+#headerBar {
+    top: 0;
+}
+
+#footerBar {
+    bottom: 0;
+
+}
+
+.navbar-inner {
+    height:100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #2c2c2c;
+    background-image: -moz-linear-gradient(top, #333333, #222222);
+    background-image: -ms-linear-gradient(top, #333333, #222222);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
+    background-image: -webkit-linear-gradient(top, #333333, #222222);
+    background-image: -o-linear-gradient(top, #333333, #222222);
+    background-image: linear-gradient(top, #333333, #222222);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);
+}
+
+.navbar-inner .brand {
+    float: left;
+    display: block;
+    padding: 8px 20px 12px;
+    margin-left: -20px;
+    font-size: 20px;
+    font-weight: 200;
+    line-height: 1;
+    color: #ffffff;
+}
+
+#contentContainer {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+#leftPane,
+#rightPane {
+    width: 200px;
+    height: 100%;
+    overflow: auto;
+    /*background-color: #ffff00;*/
+}
+
+#leftPane {
+    border-right: 1px solid #CCCCCC;
+}
+
+#rightPane {
+    border-left: 1px solid #CCCCCC;
+}
+
+#middlePane {
+    height: 100%;
+    overflow: auto;
+}
+
+.pull-left {
+    float: left;
+}
+
+.pull-right {
+    float: right;
+}
+
+.sidePaneWidget {
+    padding: 3px;
+    margin-bottom: 2px;
+    background-color: whiteSmoke;
+    /*border: 1px solid #EEE;*/
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.header {
+    display: block;
+    padding: 3px;
+    font-size: 11px;
+    font-weight: bold;
+    line-height: 18px;
+    color: #999;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    text-transform: uppercase;
+}
+
+#mainContentWrapperScrollable {
+
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+
+}
+
+/************************/
 
 div.ObjectBrowser {
     width :200px;
