pointer cursor for expand/collapse icon in the tree

--- a/nodeserver/src/client/css/JSTreeBrowserWidget.css
+++ b/nodeserver/src/client/css/JSTreeBrowserWidget.css
@@ -87,3 +87,8 @@ li.gme-loading > a .jstree-icon
 {
     background: url("../img/progress.gif") 0 0;
 }
+
+.jstree-closed > ins,
+.jstree-open > ins {
+    cursor: pointer;
+}
