--- a/nodeserver/src/client/css/ModelEditorModelWidget.css
+++ b/nodeserver/src/client/css/ModelEditorModelWidget.css
@@ -13,7 +13,7 @@
     box-shadow: inset 0 0 3px #000;
     text-align: center;
 }
-.model .modelTitle {
+.model div.modelTitle {
     color: #fff;
     text-shadow: #000 0 1px;
     box-shadow: 5px;
@@ -38,3 +38,18 @@
     -moz-border-radius-topright: 10px;
     border-top-right-radius: 10px;
 }
+
+input.modelTitle {
+    display: inline-block;
+    height: 16px;
+    padding: 1px;
+    font-size: 13px;
+    line-height: 18px;
+    color: #555555;
+    background-color: #ffffff;
+    border: 1px solid #cccccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
