- multiple selection and move - FIXME: valid position calcualtion is not correct when dragging multiple items together

--- a/nodeserver/src/client/css/ModelEditorModelWidget.css
+++ b/nodeserver/src/client/css/ModelEditorModelWidget.css
@@ -53,3 +53,9 @@ input.modelTitle {
     border-radius: 3px;
 }
 
+.selected {
+    border: 2px solid #52A8EC;
+    background-color: #DBEAFC;
+    //background-color: #C3DCFC;
+}
+
