- multiple selection model replace - multiple selection by rubberband

--- a/nodeserver/src/client/css/ModelEditorModelWidget.css
+++ b/nodeserver/src/client/css/ModelEditorModelWidget.css
@@ -56,6 +56,6 @@ input.modelTitle {
 .selected {
     border: 2px solid #52A8EC;
     background-color: #DBEAFC;
-    //background-color: #C3DCFC;
+    /*background-color: #C3DCFC;*/
 }
 
