--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -102,6 +102,14 @@ body {
     color: #ffffff;
 }
 
+.navbar-inner .navbar-text {
+     line-height: 40px;
+}
+
+.navbar-inner .navbar-text .version {
+    line-height: 20px;
+}
+
 #contentContainer {
     width: 100%;
     height: 100%;
