--- a/nodeserver/src/client/css/ModelEditorModelWidget.css
+++ b/nodeserver/src/client/css/ModelEditorModelWidget.css
@@ -59,3 +59,28 @@ input.modelTitle {
     /*background-color: #C3DCFC;*/
 }
 
+.model .children {
+    font-size: 10px;
+    width: 100%;
+}
+
+.model .children .ports {
+    display:  inline;
+    float: left;
+    min-height: 1px;
+}
+
+div.left {
+    text-align: left;
+    padding-left: 4px;
+}
+
+div.right {
+    text-align: right;
+    padding-right: 4px;
+}
+
+div.center {
+    min-width: 30px;
+    height: 1px;
+}
