--- a/nodeserver/src/client/css/ModelEditorModelWidget.css
+++ b/nodeserver/src/client/css/ModelEditorModelWidget.css
@@ -12,6 +12,7 @@
     -ms-box-shadow: inset 0 0 3px #000;
     box-shadow: inset 0 0 3px #000;
     text-align: center;
+    padding-bottom: 3px;
 }
 .model div.modelTitle {
     color: #fff;
