--- a/nodeserver/src/client/css/ModelEditorCanvasWidget.css
+++ b/nodeserver/src/client/css/ModelEditorCanvasWidget.css
@@ -21,14 +21,19 @@ div.dragPosPanel {
     text-align:center;
 }
 
-div.invalidPosition {
+/*div.invalidPosition {
     background: rgba(255, 0, 0, 0.49);
     border: #FF0000 solid 1px;
-}
+}*/
 
 div.rubberBand {
     background: rgba(219, 234, 252, 0.49);
     border: #52A8EC solid 1px;
     position: absolute;
     z-index: 100000;
+}
+
+div.children:focus
+{
+    outline: none;
 }
