--- a/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
@@ -1,17 +1,4 @@
-div.canvasTitle {
-    font-size: 16px;
-    font-weight: bold;
-    color: #ff0000;
-    padding: 5px;
-}
-
-div.childrenContainer {
-    position: absolute;
-    /*width: 100%;
-    height: 100%;*/
-}
-
-.column {
+.model.modelWithPorts {
     min-height: 100px;
     min-width: 100px;
     float: left;
@@ -25,12 +12,17 @@ div.childrenContainer {
     -ms-box-shadow: inset 0 0 3px #000;
     box-shadow: inset 0 0 3px #000;
     text-align: center;
+    padding-bottom: 3px;
 }
-.column header {
+
+.model.modelWithPorts div.modelTitle {
     color: #fff;
     text-shadow: #000 0 1px;
     box-shadow: 5px;
     padding: 5px;
+    font-size: 11px;
+    font-weight: bold;
+    text-transform: uppercase;
     background: -moz-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
     background: -webkit-gradient(linear, left top, right top,
     color-stop(0, rgb(0,0,0)),
@@ -49,58 +41,40 @@ div.childrenContainer {
     border-top-right-radius: 10px;
 }
 
-#dPartBrowser .column {
-    margin-top: 10px;
+.model.modelWithPorts.selected {
+    border: 2px solid #52A8EC;
+    background-color: #DBEAFC;
 }
 
-div.dragPosPanel {
-    font-size: 8px;
-    font-weight:bold;
-    font-family: Verdana;
-    color: #222;
-    background-color: #e6e6e6;
-    border: #222 solid 1px;
-    padding: 2px 4px;
-    display: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 80px;
-    z-index: 100000;
+.model.modelWithPorts.connection-end-state-hover {
+    border: 2px solid #ff7800;
+    background-color: #ff7800;
 }
 
-div.invalidPosition {
-    background-color: #FA6666;
-    border: #ff0000 solid 1px;
-    color: #ff0000;
-}
+/*PORTS children*/
 
-.modelEditorComponent .displayChildren {
+.model .children {
+    font-size: 10px;
     width: 100%;
-    border-top: 1px solid #aaaaaa;
-    cursor: pointer;
-    bottom: 1px;
-    line-height: 10px;
-    position: absolute;
 }
 
-.modelEditorComponent .displayChildren span {
-    color: #ff0000;
-    font-size: 9px;
-    font-family: Helvetica, Arial;
+.model .children .ports {
+    display:  inline;
+    float: left;
+    min-height: 1px;
 }
 
-.modelcomponent .children {
-    width: 100%;
-    min-height: 30px;
-    position: absolute;
+.ports.left {
+    text-align: left;
+    padding-left: 4px;
 }
 
-.noUserSelect {
-    -khtml-user-select: none;
-    -moz-user-select: -moz-none;
-    -webkit-user-select: none;
-    -o-user-select: none;
-    user-select: none;
+.ports.right {
+    text-align: right;
+    padding-right: 4px;
 }
 
+.ports.center {
+    min-width: 30px;
+    height: 1px;
+}
