--- a/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
@@ -1,10 +1,10 @@
-.modelEditorCanvas .modelEditorCanvasTitle {
+.modelEditorView .modelEditorViewTitle {
     font-size: 16px;
     font-weight: bold;
     padding: 5px;
 }
 
-.modelEditorCanvas .children .dragPosPanel {
+.modelEditorView .children .dragPosPanel {
     font-size: 8px;
     font-weight:bold;
     font-family: Verdana;
@@ -21,7 +21,7 @@
     text-align:center;
 }
 
-.modelEditorCanvas .children .rubberBand {
+.modelEditorView .children .rubberBand {
     background: rgba(219, 234, 252, 0.49);
     border: #52A8EC solid 1px;
     position: absolute;
@@ -29,7 +29,7 @@
 }
 
 /*DISABLE OUTER BORDER WHEN FOCUSED*/
-/*.modelEditorCanvas .children:focus
+.modelEditorView .children:focus
 {
     outline: none;
-}*/
+}
