add/remove pointers in GraphViz visualizer

--- a/nodeserver/src/client/css/ModelEditor/ModelEditorConnectionComponent.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorConnectionComponent.css
@@ -13,6 +13,7 @@
     box-shadow:0 1px 0 0 #ffffff;
     -webkit-box-shadow:0 1px 0 0 #ffffff;
     -moz-box-shadow:0 1px 0 0 #ffffff;
+    pointer-events: all;
 }
 
 .button-bar.disabled {
