--- a/nodeserver/src/client/css/GraphViz/GraphVizView.css
+++ b/nodeserver/src/client/css/GraphViz/GraphVizView.css
@@ -17,6 +17,7 @@
     top: 0;
     width: 100%;
     height: 100%;
+    pointer-events:none;
 }
 
 .graphVizView .paperLayer {
@@ -29,27 +30,10 @@
 }
 
 .graphVizView .paperLayer .pointer {
-    stroke: #333333;
-    fill: none;
-    stroke-width: 1px;
-}
-
-.graphVizView .paperLayer .pointer.source {
-    stroke: #FF0000;
-    stroke-width: 2px;
-}
-
-.graphVizView .paperLayer .pointer.target {
-    stroke: #0000FF;
-    stroke-width: 2px;
-}
-
-.graphVizView .paperLayer .pointer.ref {
-    stroke: #EFA749;
-    stroke-width: 2px;
 }
 
 .graphVizView .pointerFilterContainer {
+    position: fixed;
     border: 1px solid #000000;
     border-bottom: 0px solid #000000;
     background-color: rgba(200, 200, 200, 0.3);
@@ -72,18 +56,20 @@
     border-bottom: 1px solid #000000;
 }
 
-.graphVizView .pointerFilterContainer .pointerType.source {
-    background-color: #FF0000;
+.graphVizView .setPointerTypeModalDialog {
+    text-align: left;
 }
 
-.graphVizView .pointerFilterContainer .pointerType.target {
-    background-color: #0000FF;
+/*
+* Remove button for the pointer
+*/
+
+.icon-18 {
+    height:18px;
+    width:18px;
+    margin:2px;
 }
 
-.graphVizView .pointerFilterContainer .pointerType.ref {
-    background-color: #EFA749;
-}
-
-.graphVizView .pointerFilterContainer .pointerType.containment {
-    background-color: #333333;
+.icon-18-remove {
+    background: url(../../img/remove_2.png) no-repeat;
 }
