--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -187,6 +187,14 @@ body {
 
 }
 
+.pointer {
+    cursor: pointer;
+}
+
+.center {
+    text-align: center !important;
+}
+
 /************************/
 
 div.ObjectBrowser {
