--- a/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
@@ -33,3 +33,48 @@
 {
     outline: none;
 }
+
+.modelEditorView .children .selectionOutline {
+    /*background: rgba(219, 234, 252, 0.49);*/
+    border: #000000 dashed 1px;
+    position: absolute;
+    z-index: 100000;
+    pointer-events: none;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+}
+
+
+
+.modelEditorView .children .selectionOutline .deleteSelectionBtn {
+    top: -13px;
+    right: -13px;
+    background: url(../../img/remove.png) no-repeat;
+}
+
+.modelEditorView .children .selectionOutline .copySelectionBtn {
+    top: -13px;
+    left: -13px;
+    background: url(../../img/copy_2.png) no-repeat;
+}
+
+.modelEditorView .children .selectionOutline .advancedSelectionBtn {
+    bottom: -13px;
+    left: -13px;
+    background: url(../../img/adv.png) no-repeat;
+}
+
+.modelEditorView .children .selectionOutline .selectionBtn {
+    position: absolute;
+    z-index: 100000;
+    width: 26px;
+    height: 26px;
+    background-color: #FFFFFF;
+    border-radius: 13px;
+    pointer-events: all;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+}
