--- a/nodeserver/src/client/css/ModelEditor/Port.css
+++ b/nodeserver/src/client/css/ModelEditor/Port.css
@@ -1,5 +1,14 @@
 .model .children .port span.dot {
     display: inline-block;
+    width: 3px;
+    height: 7px;
+    background: #666;
+    border: 1px solid #666;
+    margin-bottom: 1px;
+    top: 2px;
+    position: relative;
+
+    /*display: inline-block;
     width: 4px;
     height: 4px;
     background: #555;
@@ -10,33 +19,53 @@
     -khtml-border-radius: 4px;
     border-radius: 4px;
     margin-bottom: 1px;
+    position: relative;
+    top: 0;*/
 }
 
 .model .children .left .port span.dot {
     margin-right: 2px;
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px
 }
 
 .model .children .right .port span.dot {
     margin-left: 2px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
 }
 
-.model .children .left .port :hover,
-.model .children .right .port :hover {
+.model .children .port:hover {
     cursor: pointer;
 }
 
-.model .children .activePort span.dot {
-    background-color: #FFFFFF;
+.model .children .port:hover span.dot {
+    border-color: rgba(82, 168, 236, 0.8);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
 
-.model .children .activePort span.title {
-    color: #FFFFFF;
+.model .children .port:hover span.title {
+    background-color: rgba(82, 168, 236, 0.21);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
 
-.model .children .ui-state-hover span.dot {
-    background-color: #ff7800;
+/* connection possible endpoint visual feedback */
+.model .children .port.connection-end-state-hover span.dot {
+    border-color: rgba(255, 120, 0, 0.8);
+    background-color: rgba(255, 120, 0, 0.8);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
 }
 
-.model .children .ui-state-hover span.title {
-    color: #ff7800;
+.model .children .port.connection-end-state-hover span.title {
+    color: #ffffff;
+    background-color: rgba(255, 120, 0, 0.3);
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 120, 0, 0.6);
 }
