--- a/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
@@ -34,6 +34,28 @@
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
+.modelEditorView .modelEditorViewUndo {
+    /*border: 1px solid #000000;*/
+    /*position: absolute;
+    right: 0px;
+    top: 0px;*/
+    display: inline-block;
+
+
+    background: url(../../img/adv.png) no-repeat;
+    background-color: #E0E0E0;
+    /*position: absolute;*/
+    z-index: 100000;
+    width: 26px;
+    height: 26px;
+    border-radius: 13px;
+    pointer-events: all;
+    cursor: pointer;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075) 0 0 8px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
+}
+
 .modelEditorView .children .dragPosPanel {
     font-size: 8px;
     font-weight:bold;
