--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -41,7 +41,7 @@ div {
 *::-webkit-scrollbar-thumb{background-clip:padding-box;border:transparent solid 2px;border-radius:7px;min-height:28px;padding:100px 0 0;-webkit-box-shadow:inset 0 0 0 7px rgba(0, 0, 0, 0.25);}
 *::-webkit-scrollbar-thumb:hover{-webkit-box-shadow:inset 0 0 0 7px rgba(0, 0, 0, 0.3);}
 *::-webkit-scrollbar-button{height:0;width:0;}
-*::-webkit-scrollbar-track{background-clip:padding-box;background:rgba(255, 255, 255, 0.9);-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.1);}
+*::-webkit-scrollbar-track{background-clip:padding-box;/*background:rgba(255, 255, 255, 0.9);*/-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.1);}
 *::-webkit-scrollbar-track:vertical{border-left:rgba(0, 0, 0, 0.1) solid 1px;}
 *::-webkit-scrollbar-track:horizontal{border-top:rgba(0, 0, 0, 0.1) solid 1px;}
 *::-webkit-scrollbar-corner{background:rgba(255, 255, 255, 0.9);-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.1);}
