--- a/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
@@ -1,9 +1,9 @@
 .model.modelWithPorts {
-    min-height: 70px;
-    min-width: 70px;
+    min-height: 65px;
+    min-width: 65px;
     float: left;
     border: 2px solid #666666;
-    background-color: #ccc;
+    background-color: #e9e9e9;
     -webkit-border-radius: 10px;
     -ms-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -18,7 +18,7 @@
 .model.modelWithPorts div.modelTitle {
     color: #fff;
     text-shadow: #000 0 1px;
-    padding: 5px;
+    padding: 1px 5px 0px 5px;
     font-size: 9px;
     font-weight: bold;
     text-transform: uppercase;
