--- a/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
@@ -2,6 +2,7 @@
     font-size: 16px;
     font-weight: bold;
     padding: 5px;
+    background-color: #efefef;
 }
 
 .modelEditorView .modelEditorViewTitle {
