--- a/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelEditorView.css
@@ -1,16 +1,16 @@
 .modelEditorView .modelEditorTop {
-    font-size: 16px;
-    font-weight: bold;
     padding: 5px;
+    height: 20px;
+    height: 30px;
     background-color: #efefef;
+    margin-bottom: 2px;
 }
 
 .modelEditorView .modelEditorViewTitle {
-    font-size: 16px;
+    font-size: 20px;
     font-weight: bold;
-    padding: 5px;
-
     display: inline-block;
+    margin-right: 10px;
 }
 
 .modelEditorView .children .dragPosPanel {
