--- a/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor/ModelWithPortsDecorator.css
@@ -18,6 +18,7 @@
 .model.modelWithPorts div.modelTitle {
     color: #fff;
     text-shadow: #000 0 1px;
+    white-space: nowrap;
     padding: 1px 5px 0px 5px;
     font-size: 9px;
     font-weight: bold;
@@ -120,10 +121,11 @@
     height: 12px;
     width: 12px;
     position: absolute;
-    left: 30px;
     cursor: pointer;
     border: 1px solid #0000FF;
     display: none;
+    margin-left: -6px;
+    left: 50%;
 }
 
 .modelWithPorts .myConnRect.bottom {
