implementing missing functionalities from the speed-enhanced ModelEditor2

--- a/nodeserver/src/client/css/ModelEditor2/ConnectionComponent.css
+++ b/nodeserver/src/client/css/ModelEditor2/ConnectionComponent.css
@@ -1,6 +1,10 @@
 .connectionEndDragPoint {
     border: 1px solid #833;
     background-color: #FFF;
+    width: 9px;
+    height: 9px;
+    margin-top: -6px;
+    margin-left: -6px;
 }
 
 .button-bar {
