--- a/nodeserver/src/client/css/ModelEditor2/ModelEditorView.css
+++ b/nodeserver/src/client/css/ModelEditor2/ModelEditorView.css
@@ -87,3 +87,11 @@
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(0, 0, 0, 0.6);
 }
+
+.modelEditorView .children .selectionOutline .specificActions {
+    bottom: -13px;
+    right: -13px;
+    position: absolute;
+    pointer-events: all;
+    cursor: pointer;
+}
