--- a/nodeserver/src/client/css/ModelEditor2/DefaultDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor2/DefaultDecorator.css
@@ -97,3 +97,23 @@
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
+
+/* PARTBROWSER STYLE */
+.part .modelDefault {
+    min-height: 40px;
+    min-width: 65px;
+    float: left;
+    border: 2px solid #000000;
+    background-color: #DEDEDE;
+    text-align: center;
+    padding-bottom: 3px;
+}
+
+.part .modelDefault div.modelTitle {
+    white-space: nowrap;
+    padding: 11px 5px 0px 5px;
+    font-size: 9px;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
