--- a/nodeserver/src/client/css/ModelEditor2/ModelWithPortsDecorator.css
+++ b/nodeserver/src/client/css/ModelEditor2/ModelWithPortsDecorator.css
@@ -146,3 +146,43 @@
     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
 }
+
+/********** PARTBROWSER DECORATOR STYLE ***************/
+.part .modelWithPorts {
+    min-height: 65px;
+    min-width: 65px;
+    float: left;
+    border: 2px solid #666666;
+    background-color: #e9e9e9;
+    -webkit-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 3px #000;
+    -ms-box-shadow: inset 0 0 3px #000;
+    box-shadow: inset 0 0 3px #000;
+    text-align: center;
+    padding-bottom: 3px;
+}
+
+.part .modelWithPorts div.modelTitle {
+    color: #fff;
+    text-shadow: #000 0 1px;
+    white-space: nowrap;
+    padding: 1px 5px 0px 5px;
+    font-size: 9px;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: -moz-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
+    background: -webkit-gradient(linear, left top, right top,color-stop(0, rgb(0,0,0)),color-stop(0.50, rgb(79,79,79)),color-stop(1, rgb(21,21,21)));
+    background: -ms-linear-gradient(left center, rgb(0,0,0), rgb(79,79,79), rgb(21,21,21));
+    border-bottom: 1px solid #ddd;
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -ms-border-radius-topleft: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -ms-border-top-right-radius: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-right-radius: 10px;
+}
