--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -216,3 +216,9 @@ div.ObjectBrowser {
     height: 200px;
     overflow-x: auto;
 }
+
+/************** OVEERIDE BOOTSTRAP *******************/
+.popover {
+    z-index: 1100;
+    width: auto;
+}
