removing prev commit browser form TKecskes

--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -212,10 +212,10 @@ div.ObjectBrowser {
 
 /************************/
 
-#commitbrowser {
+/*#commitbrowser {
     height: 200px;
     overflow-x: auto;
-}
+}*/
 
 /************** OVEERIDE BOOTSTRAP *******************/
 .popover {
