--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -1,4 +1,5 @@
 @import url("bootstrap.css");
+@import url("bootstrap_webgme_ext.css");
 @import url("qtip/jquery.qtip.css");
 @import url("../design/css/jquery.gritter.css");
 @import url("jqueryui/jquery-ui-1.9.0.custom.css");
@@ -216,13 +217,3 @@ div.ObjectBrowser {
 
 /************************/
 
-/*#commitbrowser {
-    height: 200px;
-    overflow-x: auto;
-}*/
-
-/************** OVEERIDE BOOTSTRAP *******************/
-.popover {
-    z-index: 1100;
-    width: auto;
-}
