--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -3,6 +3,11 @@
     z-index: 1100;
     width: auto;
 }
+
+.tooltip {
+    z-index: 1100;
+}
+
 .btn-group {
     display: inline-block; /*introduced in 2.2.1*/
 }
@@ -13,6 +18,10 @@
     padding: 2px 6px;
     font-size: 11px;
     line-height: 9px; /* 17px;*/
+}
+
+.nowrap {
+    white-space: nowrap;
 }
 
 button.btn.btn-micro,
