upgrade to bootstrap 2.2.1

--- a/nodeserver/src/client/css/main.css
+++ b/nodeserver/src/client/css/main.css
@@ -156,13 +156,13 @@ body {
     overflow: auto;
 }
 
-.pull-left {
+/*.pull-left {
     float: left;
 }
 
 .pull-right {
     float: right;
-}
+}*/
 
 .sidePaneWidget {
     padding: 3px;
