--- a/nodeserver/src/client/css/bootstrap_webgme_ext.css
+++ b/nodeserver/src/client/css/bootstrap_webgme_ext.css
@@ -1,15 +1,91 @@
 /************** OVEERIDE BOOTSTRAP *******************/
 .popover {
-    z-index: 1100;
     width: auto;
 }
 
-.tooltip {
-    z-index: 1100;
+/******************* tooltiplabel - BASED ON TOOLTIP BUT DOES NOT HAVE DIFFERENT Z-INDEX *****************/
+
+.tooltiplabel {
+    position: absolute;
+    display: block;
+    padding: 5px;
+    font-size: 11px;
+    opacity: 0;
+    filter: alpha(opacity=0);
+    visibility: visible;
 }
 
-.btn-group {
-    display: inline-block; /*introduced in 2.2.1*/
+.tooltiplabel.in {
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+}
+
+.tooltiplabel.top {
+    margin-top: -3px;
+}
+
+.tooltiplabel.right {
+    margin-left: 3px;
+}
+
+.tooltiplabel.bottom {
+    margin-top: 3px;
+}
+
+.tooltiplabel.left {
+    margin-left: -3px;
+}
+
+.tooltiplabel-inner {
+    max-width: 200px;
+    padding: 3px 8px;
+    color: #ffffff;
+    text-align: center;
+    text-decoration: none;
+    background-color: #000000;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.tooltiplabel-arrow {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+
+.tooltiplabel.top .tooltiplabel-arrow {
+    bottom: 0;
+    left: 50%;
+    margin-left: -5px;
+    border-top-color: #000000;
+    border-width: 5px 5px 0;
+}
+
+.tooltiplabel.right .tooltiplabel-arrow {
+    top: 50%;
+    left: 0;
+    margin-top: -5px;
+    border-right-color: #000000;
+    border-width: 5px 5px 5px 0;
+}
+
+.tooltiplabel.left .tooltiplabel-arrow {
+    top: 50%;
+    right: 0;
+    margin-top: -5px;
+    border-left-color: #000000;
+    border-width: 5px 0 5px 5px;
+}
+
+.tooltiplabel.bottom .tooltiplabel-arrow {
+    top: 0;
+    left: 50%;
+    margin-left: -5px;
+    border-bottom-color: #000000;
+    border-width: 0 5px 5px;
 }
 
 /******************* MICRO BUTTON DEFINITION *******************/
@@ -45,7 +121,7 @@ input[type="submit"].btn.btn-micro {
     margin-top: 3px; /*6px;*/
 }
 
-.btn-micro .label,
+.btn-micro .tooltiplabel,
 .btn-micro .badge {
     top: 0;
 }
